updated install instructions

--- a/bioneuron_oracle.ipynb
+++ b/bioneuron_oracle.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "source": [
     "### Install channel mechanisms for the bahl.hoc NEURON model\n",
-    "To run the NEURON model, bahl.hoc, you must download the .hoc file and .mod files for every ion channel present in the model. These can be found in the oracle branch of my bionengo repo.\n",
+    "To run the NEURON model, bahl.hoc, you must download the .hoc file and .mod files for every ion channel present in the model. These come with the repo, but must be compiled with the NEURON you've just installed locally.\n",
     "\n",
     "Be sure to change the path to your .local directory to compile the NEURON channel mechanisms."
    ]
